# sycl_101

./: README.md  sample.cpp  sycl_101.cpp
cuda2sycl/: README.md  cuda2sycl.cpp  cuda2sycl.cu
intrinsics_101/: Readme.md  avx512_vnni.cpp
intrinsics_amx_vs_vnni/: Readme.md  intrinsics_amx_vs_vnni.cpp
level_zero_101/: README.md  level_zero_101.cpp
level_zero_sysman_and_sycl/: README.md  level_zero_sysman_and_sycl.cpp
openmp_tbb/: Readme.md  openmp_tbb_multithreads.cpp
stack_heap_host/: Readme.md  satck_heap_host.cpp  stack_heap_host.cpp
sycl_AI_dense_layer/: README.md  sycl_dense_layer.cpp  sycl_dense_layer_optimized  sycl_dense_layer_optimized.cpp
sycl_accessor_creation_bench/: Readme.md  sycl_accessor_creation_bench.cpp
sycl_atomic_bench/: sycl_atomic_bench.cpp
sycl_benchmark/: README.md  sycl_benchmark.cpp
sycl_cmake/: CMakeLists.txt  README.md  build.bat  build.sh  simple.cpp
sycl_codepin/: README.md  sycl_codepin.cu
sycl_codepin2/: Readme.md  example.cu
sycl_codepin_101/: Readme.md  example.cu
sycl_convolution/: Readme.md  sycl_convolution.cpp
sycl_data_accessing_kernel_output/: sycl_data_accessing_kernel_output.cpp
sycl_debug/: sycl_debug.cpp
sycl_device_info/: sycl_device_info.cpp  sycl_device_more_info.cpp
sycl_esimd/: README  README.md  sycl_base.cpp  sycl_esimd.cpp
sycl_expressing_parallelism/: Readme.md  sycl_expressing_parallelism.cpp
sycl_graph_scheduling/: Readme.md  sycl_graph_scheduling.cpp
sycl_itt/: Readme.md  sycl_itt.cpp
sycl_kernel_optimization/: README.md  sycl_kernel_after_optimization.cpp  sycl_kernel_before_optimization.cpp
sycl_matrix_multiplication_gpu/: README.md  sycl_matrix_multiplication_gpu.cpp
sycl_matrix_multiplication_optimization/: Readme.md  sycl_matrix_multipliation_optimization.cpp
sycl_matrix_multiplication_optimmization/: sycl_matrix_multipliation_optimization.cpp
sycl_memory_alignment/: sycl_memory_alignment.cpp
sycl_memory_banks/: README.md  sycl_memory_banks.cpp
sycl_mkl_benchmark/: Readme.md  mkl_bf16bf16f32_benchmark.cpp  mkl_gemm_bf16bf16f32_benchmark.cpp  mkl_gemm_f16f16f32_benchmark.cpp  mkl_sgemm.cpp  mkl_sgemm_benchmark.cpp  sycl_mkl_bf16gemm_benchmark.cpp
sycl_onedal/: README.md  dpc_helpers.hpp  sample.cpp
sycl_opencl_onedal/: README.md  blur.cl  test_dpl.cpp  test_opencl.cpp  test_sycl.cpp
sycl_opencv-cl/: Readme.md  dpl.cpp  grayscale.cl  onedpl.cpp  opencv-cl.cpp  sycl.cpp
sycl_opencv_opencl/: Readme.md  grayscale.cl  opencv_opencl.cpp  sycl.cpp
sycl_profiling_optimization/: README.md  sycl_basic_matmul.cpp  sycl_tiling.cpp  sycl_tiling_localmemory.cpp  sycl_tiling_localmemory_loopunroling.cpp
sycl_stencil/: Readme.md  sycl_stencil.cpp
sycl_stream_triad/: Readme.md  sycl_stream_triad.cpp
sycl_subgroup/: README.md  sycl_get_subgroup_size.cpp  sycl_subgroup.cpp
sycl_syclcompat/: README.md  syclcompat.cpp
sycl_usm_allocation/: sycl_usm_allocation.cpp
sycl_usm_buffer_accessor/: Readme  Readme.md  sycl_usm_bufferaccessor_benchmark.cpp
sycl_wrapper_for_c/: CMakeLists.txt  README.md  main.c  sycl_vector_add.cpp  sycl_vector_add.h  sycl_wrapper.c  sycl_wrapper.h
